Fixed visibility rule

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -25,7 +25,7 @@ div.badge {
   margin: 0 8px;
 }
 
-.collapsible-header > div.badge.vis-hidden {
+.circuits > div.badge.vis-hidden {
   visibility: hidden;
 }
 
